# snippet-examples

./: LICENSE  README.md
ai/cv/py-cv-example/: .gitignore  lane_detection_with_yolo8.py  parse_car_number.py  pt_to_onnx.py  pyproject.toml  pyside_cv.py  uv.toml
ai/llm/modescope-example/: .gitignore
application/flutter_getx_example/: pubspec.yaml
application/flutter_getx_example/ios/Runner.xcodeproj/: project.pbxproj
application/flutter_getx_example/lib/: router.dart
application/flutter_getx_example/lib/binding/: TodoVMBinding.dart
application/flutter_getx_example/lib/model/: Todo.dart
application/flutter_getx_example/lib/view/: TodoItem.dart  TodoList.dart
application/flutter_getx_example/linux/: CMakeLists.txt
application/flutter_getx_example/linux/runner/: my_application.cc
application/flutter_getx_example/web/: manifest.json
application/py-chat-example/: README.md  main.py  pyproject.toml
application/py-chat-example/ui/: mainwindow.py  mainwindow.ui  mainwindow_ui.py
application/py-qml-example/: .gitignore  main.py  pyproject.toml
application/py-qml-example/qml/: mainwindow.qml
application/qt-qml-example/: CMakeLists.txt  main.cpp
application/qt-qml-example/include/: backend.h
application/qt-qml-example/qml/: Animate.qml  Attribute.qml  BusyIndicator.qml  Button.qml  Canvas.qml  Canvas2.qml  CheckBox.qml  ChildListView.qml  ComboBox.qml  DelayButton.qml  Dial.qml  Dialog.qml  Drawer.qml  Flickable.qml  GridView.qml  GridViewItem.qml  ListView.qml  Locator.qml  MVC.qml  Main.qml  PathView.qml  Popup.qml  ProgressBar.qml  TabBar.qml  Text.qml  TextEdit.qml  TextInput.qml  qml.qrc  qml_rc.py
application/qt-qml-example/src/: backend.cpp
application/qt-widget-example/: CMakeLists.txt
application/qt-widget-example/src/ui/: mainwindow.cpp
application/qt-widget-example/ui/: mainwindow.ui
application/rust-tauri-example/: README.md  components.json  package.json  vite.config.ts
application/rust-tauri-example/src/: main.tsx  router.tsx
application/rust-tauri-example/src-tauri/: Cargo.toml  tauri.conf.json
application/rust-tauri-example/src-tauri/capabilities/: default.json
application/rust-tauri-example/src-tauri/src/: main.rs
application/rust-tauri-example/src/i18n/: index.ts
application/rust-tauri-example/src/pages/: index.ts  layout.tsx
application/wpf-wallet-example/: WalletApp.sln
application/wpf-wallet-example/Common/WalletApp.Assets/: WalletApp.Assets.csproj
application/wpf-wallet-example/Modules/WalletApp.Cards/: CardsModule.cs  WalletApp.Cards.csproj
application/wpf-wallet-example/Modules/WalletApp.Dashboard/: DashboardModule.cs  WalletApp.Dashboard.csproj
application/wpf-wallet-example/Modules/WalletApp.Insights/: InsightsModule.cs  WalletApp.Insights.csproj
application/wpf-wallet-example/Modules/WalletApp.Manage/: ManageModule.cs
application/wpf-wallet-example/Tests/TestCSharp/: TestCSharp.csproj  TestInterface.cs  TestRecord.cs
application/wpf-wallet-example/WalletApp/: App.xaml  App.xaml.cs  WalletApp.csproj
application/wpf-wallet-example/WalletApp/Models/: MenuItem.cs
application/wpf-wallet-example/WalletApp/ViewModels/: MainViewModel.cs
application/wpf-wallet-example/WalletApp/Views/: MainView.xaml  MainView.xaml.cs
backend/csharp-example/: csharp-example.sln
backend/csharp-example/Modules/WpfApp.HomeModule/: ModuleHome.cs  WpfApp.HomeModule.csproj
backend/csharp-example/TestApi/: TestApi.csproj
backend/csharp-example/WebApi/: ApiDbContext.cs  Program.cs  WebApi.csproj
backend/csharp-example/WebApi/Commons/: AuthExtension.cs  SwaggerExtension.cs
backend/csharp-example/WpfApp/: App.xaml  App.xaml.cs  WpfApp.csproj
backend/csharp-mssql-example/: csharp-example.sln
backend/csharp-mssql-example/TestApi/: Test1.cs
backend/csharp-mssql-example/WebApi/: appsettings.json
backend/express-liquid-example/: package.json
backend/express-liquid-example/src/: compile.ts  index.ts
backend/express-mongo-example/: README.md  docker-compose.yaml  package.json  tsconfig.json  tsup.config.ts
backend/express-mongo-example/src/: index.ts  swagger.ts
backend/express-mysql-example/: .gitignore  package.json  tsup.config.ts
backend/express-mysql-example/src/: database.ts  index.ts
backend/fastapi-postgres-example/: .gitignore  README.md  main.py  pyproject.toml
backend/fastapi-postgres-example/handler/: __init__.py  index.py
backend/fastapi-postgres-example/model/: __init__.py  user.py
backend/go-gin-gorm-example/: README.md  docker-compose.yaml  go.mod  go.sum  main.go
backend/go-gin-gorm-example/docs/: docs.go  swagger.json  swagger.yaml
backend/go-gin-gorm-example/handler/: index.go  user.go
backend/go-gin-gorm-example/model/: mod.go  user.go
backend/rust-axum-sqlx-example/: .env.example  .gitignore  Cargo.toml  docker-compose.yaml
backend/rust-axum-sqlx-example/src/: main.rs
backend/rust-axum-sqlx-example/src/database/: mod.rs
backend/rust-axum-sqlx-example/src/handler/: index.rs  user.rs
backend/rust-axum-sqlx-example/src/model/: user.rs
backend/rust-axum-sqlx-example/src/router/: mod.rs
frontend/flutter_getx_example/lib/: main.dart
frontend/flutter_getx_example/test/: widget_test.dart
frontend/flutter_getx_example/web/: index.html
frontend/flutter_getx_example/windows/: CMakeLists.txt
frontend/react-zustand-example/: package.json  vite.config.ts  vitest.config.ts
frontend/react-zustand-example/src/: index.css  main.tsx  router.tsx
frontend/rust-wasm-example/: Cargo.toml  README.md
frontend/rust-wasm-example/example/: Cargo.toml
frontend/rust-wasm-example/lib_wasm/: Cargo.toml
frontend/uniapp-vue3-example/: README.md  package.json
llm/modescope-example/: README.md  download.py  main.py  pyproject.toml
other/py-libs-example/: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
other/py-libs-example/elasticsearch/: config.yml
other/py-libs-example/tests/: celery_test.py  es_test.py  minio_test.py  mongo_test.py  mysql_test.py  orm_test.py  postgres_test.py  rabbitmq_test.py  redis_test.py  sqlite_test.py
(+83 files in other folders)
