[package]
name = "rase"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio", "tls-native-tls", "time", "chrono", "macros", "derive"] }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
once_cell = "1.21.3"

utoipa = { version = "5.3.1", features = ["axum_extras", "time", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }