[project]
name = "py-libs-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.2",
    "minio>=7.2.15",
    "pika>=1.3.2", # rabbitmq
    "psycopg2>=2.9.10", # postgres
    "pymongo>=4.12.1", # mongodb
    "pymysql>=1.1.1", # mysql
    "pyside6>=6.9.0",
    "pytest>=8.3.5",
    "redis>=6.1.0",
    "sqlalchemy>=2.0.40",
]
